--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.14.0",
     "@sendgrid/mail": "^8.1.5",
     "@types/multer": "^2.0.0",
+    "@vercel/speed-insights": "^1.2.0",
     "cloudinary": "^2.7.0",
     "lucide-react": "^0.539.0",
     "multer": "^2.0.2",
