--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "cloudinary": "^2.7.0",
     "lucide-react": "^0.539.0",
+    "mongoose": "^8.17.2",
     "multer": "^2.0.2",
     "next": "15.4.6",
     "prisma": "^6.14.0",
